--- a/css/style.css
+++ b/css/style.css
@@ -65,9 +65,13 @@ section {
 
 .icons img:hover {
     transition: 0.3s linear;
-    width: 35px;
+    max-width: 35px;
     height: 35px;
 
+}
+
+.btnMobile {
+    display: none;
 }
 
 .btn {
@@ -143,6 +147,7 @@ section {
     font-size: 2rem;
     font-weight: 300;
     padding: 1rem 0;
+    margin-bottom: 1rem;
 }
 
 .title {
@@ -234,7 +239,7 @@ section {
 
 .review .box-container .box .user {
     border-radius: 50%;
-    width: 10rem;
+    max-width: 10rem;
     height: 10rem;
 }
 
@@ -260,11 +265,11 @@ section {
     border-radius: 50%;
     padding: 1rem;
     height: 30px;
-    width: 30px;
+    max-width: 30px;
 }
 
 .footer .share img:hover {
-    width: 35px;
+    max-width: 35px;
     height: 35px;
     background-color: var(--main-color);
 }
@@ -277,7 +282,7 @@ section {
     position: fixed;
     top: 0;
     right: -100%;
-    width: 380px;
+    max-width: 380px;
     height: 100vh;
     background: #111;
     color: #fff;
@@ -309,7 +314,7 @@ section {
     margin-bottom: 10px;
 }
 
-.cart-painel h2{
+.cart-painel h2 {
     font-size: 2.5rem;
     padding-top: 30px;
     padding-bottom: 15px;
@@ -329,24 +334,24 @@ section {
     border-radius: 0 0 0 10px;
 }
 
-.cart-form input{
+.cart-form input {
     display: flex;
-    align-items:flex-start;
+    align-items: flex-start;
     margin: 0 0 15px 0;
 }
 
-.cart-form #nameCliente{
-    width: 250px;
+.cart-form #nameCliente {
+    max-width: 250px;
     padding: 7px;
     font-size: 1.5rem;
 }
 
-.cart-form #date{
+.cart-form #date {
     padding: 7px;
     font: 1.5rem;
 }
 
-.cart-form span{
+.cart-form span {
     color: var(--main-color);
 }
 
@@ -356,7 +361,7 @@ section {
 
 
 .cart-item img {
-    width: 50px;
+    max-width: 50px;
     height: 50px;
     border-radius: 6px;
 }
@@ -367,3 +372,24 @@ section {
 }
 
 /* -----------------------------------------------------*/
+
+/* CSS MOBILE */
+
+@media (max-width: 768px) {
+
+    /* ================= HEADER ================= */
+    .header section {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+
+    .btnMobile {
+        display: flex;
+    }
+
+    .btnDesktop {
+        display: none;
+    }
+}
