--- a/css/style.css
+++ b/css/style.css
@@ -1,374 +1,370 @@
 :root {
-    --main-color: #d3ad7f;
-    --black: #13131a;
-    --bg: #010103;
-    --border: 0.1rem solid rgba(255, 255, 255, 0.3);
-    font-size: 10px;
+  --main-color: #d3ad7f;
+  --black: #13131a;
+  --bg: #010103;
+  --border: 0.1rem solid rgba(255, 255, 255, 0.3);
+  font-size: 10px;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    outline: none;
-    border: none;
-    text-decoration: none;
-    transition: 0.3s linear;
-    font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+  outline: none;
+  border: none;
+  text-decoration: none;
+  transition: 0.3s linear;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
-    background-color: var(--bg);
+  background-color: var(--bg);
 }
 
 section {
-    padding: 3rem 2rem;
-    margin: 0 auto;
-    max-width: 1200px;
+  padding: 3rem 2rem;
+  margin: 0 auto;
+  max-width: 1200px;
 }
 
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 99;
-    border-bottom: var(--border);
-    background-color: var(--bg);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 99;
+  border-bottom: var(--border);
+  background-color: var(--bg);
 }
 
 .header section {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .navbar a {
-    margin: 0 1rem;
-    font-size: 1.8rem;
-    color: #fff;
+  margin: 0 1rem;
+  font-size: 1.8rem;
+  color: #fff;
 }
 
 .navbar a:hover {
-    background: #d3ad7f;
-    padding: 8px;
-    border-radius: 13px;
-    transition: 0.3s;
-    font-size: 2rem;
+  background: #d3ad7f;
+  padding: 8px;
+  border-radius: 13px;
+  transition: 0.3s;
+  font-size: 2rem;
 }
 
 .icons img {
-    margin: 1rem;
-    cursor: pointer;
+  margin: 1rem;
+  cursor: pointer;
 }
 
 .icons img:hover {
-    transition: 0.3s linear;
-    max-width: 35px;
-    height: 35px;
-
+  transition: 0.3s linear;
+  max-width: 35px;
+  height: 35px;
 }
 
 .btnMobile {
-    display: none;
+  display: none;
 }
 
 .btn {
-    background: var(--main-color);
-    color: #fff;
-    padding: 1rem 3rem;
-    font-size: 1.7rem;
-    cursor: pointer;
-    margin-top: 1rem;
+  background: var(--main-color);
+  color: #fff;
+  padding: 1rem 3rem;
+  font-size: 1.7rem;
+  cursor: pointer;
+  margin-top: 1rem;
 }
 
 .btn:hover {
-    letter-spacing: 0.05rem;
+  letter-spacing: 0.05rem;
 }
 
 .btnService {
-    background: var(--main-color);
-    color: #fff;
-    padding: 1rem 3rem;
-    font-size: 1.7rem;
-    cursor: pointer;
-    margin-top: 1rem;
+  background: var(--main-color);
+  color: #fff;
+  padding: 1rem 3rem;
+  font-size: 1.7rem;
+  cursor: pointer;
+  margin-top: 1rem;
 }
 
 .btnService:hover {
-    letter-spacing: 0.05rem;
+  letter-spacing: 0.05rem;
 }
 
 .btnService.selected {
-    background: #333;
-    color: #000000;
-    padding: 1rem 3rem;
-    font-size: 1.7rem;
-    cursor: pointer;
-    margin-top: 1rem;
+  background: #333;
+  color: #000000;
+  padding: 1rem 3rem;
+  font-size: 1.7rem;
+  cursor: pointer;
+  margin-top: 1rem;
 }
 
-
 .home-container {
-    background:
-        radial-gradient(ellipse at 120% center,
-            rgba(0, 0, 0, 0.15) 30%,
-            rgba(0, 0, 0, 0.92) 50%,
-            rgba(0, 0, 0) 80%),
-        url("/img/photo-1585747860715-2ba37e788b70.jfif");
+  background:
+    radial-gradient(
+      ellipse at 120% center,
+      rgba(0, 0, 0, 0.15) 30%,
+      rgba(0, 0, 0, 0.92) 50%,
+      rgba(0, 0, 0) 80%
+    ),
+    url("/img/photo-1585747860715-2ba37e788b70.jfif");
 
-    background-position: center;
-    background-size: cover;
+  background-position: center;
+  background-size: cover;
 }
 
 .home-container section {
-    display: flex;
-    align-items: center;
-    min-height: 100vh;
+  display: flex;
+  align-items: center;
+  min-height: 100vh;
 }
 
 .content {
-    max-width: 60rem;
+  max-width: 60rem;
 }
 
 .content h2 {
-    color: #fff;
-    font-size: 7rem;
+  color: #fff;
+  font-size: 7rem;
 }
 
 .content h3 {
-    color: #fff;
-    font-size: 3.5rem;
+  color: #fff;
+  font-size: 3.5rem;
 }
 
 .content p {
-    color: #cacaca;
-    font-size: 2rem;
-    font-weight: 300;
-    padding: 1rem 0;
-    margin-bottom: 1rem;
+  color: #cacaca;
+  font-size: 2rem;
+  font-weight: 300;
+  padding: 1rem 0;
+  margin-bottom: 1rem;
 }
 
 .title {
-    font-size: 4rem;
-    color: var(--main-color);
-    text-align: center;
-    margin-bottom: 2rem;
+  font-size: 4rem;
+  color: var(--main-color);
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 .title span {
-    color: #fff;
+  color: #fff;
 }
 
 .about .row {
-    display: flex;
-    align-items: center;
-    background-color: var(--black);
-    gap: 5rem;
-    height: 400px;
+  display: flex;
+  align-items: center;
+  background-color: var(--black);
+  gap: 5rem;
+  height: 400px;
 }
 
 .about .row .content {
-    padding: 2rem;
+  padding: 2rem;
 }
 
 .about .row .content h3 {
-    font-size: 3rem;
-    color: #fff;
+  font-size: 3rem;
+  color: #fff;
 }
 
 .about .row .content p {
-    font-size: 1.6rem;
-    color: #fff;
-    padding: 1rem 0;
-    line-height: 1, 8;
+  font-size: 1.6rem;
+  color: #fff;
+  padding: 1rem 0;
+  line-height: 1, 8;
 }
 
 .box-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    gap: 1.5rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
 }
 
 .menu .box-container .box {
-    text-align: center;
-    border: var(--border);
-    padding: 5rem;
-    cursor: pointer;
+  text-align: center;
+  border: var(--border);
+  padding: 5rem;
+  cursor: pointer;
 }
 
 .menu .box-container .box h3 {
-    color: #fff;
-    font-size: 2rem;
-    padding: 1rem 0;
+  color: #fff;
+  font-size: 2rem;
+  padding: 1rem 0;
 }
 
 .menu .box-container .box .price {
-    color: #fff;
-    font-size: 2.5rem;
-    padding: 0.5 0;
+  color: #fff;
+  font-size: 2.5rem;
+  padding: 0.5 0;
 }
 
 .menu .box-container .box .price span {
-    font-size: 1.5rem;
-    text-decoration: line-through;
-    font-weight: lighter;
+  font-size: 1.5rem;
+  text-decoration: line-through;
+  font-weight: lighter;
 }
 
-
 .review .box-container .box {
-    border: var(--border);
-    text-align: center;
-    padding: 3rem 2rem;
+  border: var(--border);
+  text-align: center;
+  padding: 3rem 2rem;
 }
 
 .review .box-container .box p {
-    font-size: 1.5rem;
-    color: #fff;
-    padding: 2rem 0;
-    line-height: 1.8;
-    font-weight: lighter;
+  font-size: 1.5rem;
+  color: #fff;
+  padding: 2rem 0;
+  line-height: 1.8;
+  font-weight: lighter;
 }
 
 .review .box-container .box h3 {
-    font-size: 2rem;
-    color: #fff;
-    margin: 1rem 0;
+  font-size: 2rem;
+  color: #fff;
+  margin: 1rem 0;
 }
 
 .review .box-container .box .user {
-    border-radius: 50%;
-    max-width: 10rem;
-    height: 10rem;
+  border-radius: 50%;
+  max-width: 10rem;
+  height: 10rem;
 }
 
 .addres {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 /* CSS RODAPÉ (REDES SOCIAIS) */
 
 .footer {
-    text-align: center;
+  text-align: center;
 }
 
 .footer .share {
-    padding: 1rem 0;
+  padding: 1rem 0;
 }
 
 .footer .share img {
-    margin: 0.3rem;
-    cursor: pointer;
-    border-radius: 50%;
-    padding: 1rem;
-    height: 30px;
-    max-width: 30px;
+  margin: 0.3rem;
+  cursor: pointer;
+  border-radius: 50%;
+  padding: 1rem;
+  height: 30px;
+  max-width: 30px;
 }
 
 .footer .share img:hover {
-    max-width: 35px;
-    height: 35px;
-    background-color: var(--main-color);
+  max-width: 35px;
+  height: 35px;
+  background-color: var(--main-color);
 }
 
 /* -----------------------------------------------------*/
-
 
 /* CSS PAINEL CARRINHO */
 .cart-painel {
-    position: fixed;
-    top: 0;
-    right: -100%;
-    max-width: 380px;
-    height: 100vh;
-    background: #111;
-    color: #fff;
-    z-index: 999;
-    padding: 2rem;
-    transition: right 0.3s ease;
+  position: fixed;
+  top: 0;
+  right: -100%;
+  max-width: 380px;
+  height: 100vh;
+  background: #111;
+  color: #fff;
+  z-index: 999;
+  padding: 2rem;
+  transition: right 0.3s ease;
 }
 
 .cart-painel.open {
-    right: 0;
+  right: 0;
 }
 
 .cart-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* -----------------------------------------------------*/
 
-
 /* CSS ITEMS CARRINHO */
 .cart-item {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    border: var(--border);
-    padding: 5px;
-    margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  border: var(--border);
+  padding: 5px;
+  margin-bottom: 10px;
 }
 
 .cart-painel h2 {
-    font-size: 2.5rem;
-    padding-top: 30px;
-    padding-bottom: 15px;
+  font-size: 2.5rem;
+  padding-top: 30px;
+  padding-bottom: 15px;
 }
 
 .cart-header span {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 .cart-header button {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 7px 9px;
-    background-color: var(--main-color);
-    font-weight: bold;
-    border-radius: 0 0 0 10px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 7px 9px;
+  background-color: var(--main-color);
+  font-weight: bold;
+  border-radius: 0 0 0 10px;
 }
 
 .cart-form input {
-    display: flex;
-    align-items: flex-start;
-    margin: 0 0 15px 0;
+  display: flex;
+  align-items: flex-start;
+  margin: 0 0 15px 0;
 }
 
 .cart-form #nameCliente {
-    max-width: 250px;
-    padding: 7px;
-    font-size: 1.5rem;
+  max-width: 250px;
+  padding: 7px;
+  font-size: 1.5rem;
 }
 
 .cart-form #date {
-    padding: 7px;
-    font: 1.5rem;
+  padding: 7px;
+  font: 1.5rem;
 }
 
 .cart-form span {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 .cart-painel p {
-    font-size: 1.8rem;
+  font-size: 1.8rem;
 }
 
-
 .cart-item img {
-    max-width: 50px;
-    height: 50px;
-    border-radius: 6px;
+  max-width: 50px;
+  height: 50px;
+  border-radius: 6px;
 }
 
 .cart-item p {
-    color: #fff;
-    font-size: 16px;
+  color: #fff;
+  font-size: 16px;
 }
 
 /* -----------------------------------------------------*/
@@ -376,20 +372,137 @@ section {
 /* CSS MOBILE */
 
 @media (max-width: 768px) {
+  html,
+  body {
+    overflow-x: hidden !important;
+    width: 100%;
+  }
 
-    /* ================= HEADER ================= */
-    .header section {
-        display: flex;
-        justify-content: space-between;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-    }
+  /* ================= HEADER ================= */
+  .header section {
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+  }
 
-    .btnMobile {
-        display: flex;
-    }
+  .navbar {
+    display: none;
+  }
 
-    .btnDesktop {
-        display: none;
-    }
+  .navBar-open {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 85px;
+    right: 0;
+    background-color: var(--main-color);
+    padding: 1rem;
+    border-radius: 15px;
+  }
+
+  .navBar-open a {
+    margin: 0.5rem;
+    max-width: 100%;
+  }
+
+  .navBar-open a:hover {
+    background-color: #d6a161;
+    transition: 0.3s;
+    font-size: 1.8rem;
+  }
+
+  .icons {
+    display: flex;
+    justify-content: left;
+    padding-top: 2px;
+  }
+
+  /* ================= HOME ================= */
+  .home-container h2 {
+    font-size: 4rem;
+  }
+
+  .home-container h3 {
+    font-size: 2.5rem;
+  }
+
+  .home-container p {
+    font-size: 1.8rem;
+  }
+
+  /* ================= ABOUT ================= */
+  .about .row {
+    flex-direction: column;
+    justify-content: center;
+    height: auto;
+    width: 90%;
+    gap: 0;
+  }
+
+  .about img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .about h2 {
+    font-size: 4rem;
+    text-align: left;
+  }
+
+  /* ================= MENU ================= */
+
+  .menu h2 {
+    font-size: 4rem;
+    text-align: left;
+  }
+
+  .menu .box-container {
+    width: 90%;
+  }
+
+  .menu .box-container .box {
+    padding: 3rem;
+  }
+
+  .menu .box-container .box .price {
+    padding-bottom: 2.5rem;
+  }
+
+  /* ================= REVIEW ================= */
+
+  .review h2 {
+    font-size: 4rem;
+    text-align: left;
+  }
+
+  .review .box-container {
+    width: 90%;
+  }
+
+  /* ================= ENDEREÇO ================= */
+  .addres h2 {
+    font-size: 4rem;
+    text-align: left;
+  }
+
+  .addres iframe {
+    width: 100%;
+    height: 300px;
+  }
+
+  /* BOTÕES JAVASCRIPT MENU MOBILE */
+
+  .btnMobile {
+    display: none;
+    transition: 5s;
+  }
+
+  .btnDrop {
+    display: flex;
+    transition: 5s;
+  }
+
+  .btnDesktop {
+    display: none;
+  }
 }
