--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,9 @@ body {
 
 section {
   padding: 3rem 2rem;
-  margin: 0 auto;
   max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header {
@@ -31,9 +32,9 @@ section {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 99;
   border-bottom: var(--border);
   background-color: var(--bg);
+  z-index: 9;
 }
 
 .header section {
@@ -42,6 +43,8 @@ section {
   justify-content: space-between;
   padding-top: 1rem;
   padding-bottom: 1rem;
+  max-width: 1500px
+
 }
 
 .navbar a {
@@ -288,7 +291,7 @@ section {
   height: 100vh;
   background: #111;
   color: #fff;
-  z-index: 999;
+  z-index: 3;
   padding: 2rem;
   transition: right 0.3s ease;
 }
